--- a/index.html
+++ b/index.html
@@ -74,15 +74,10 @@
         <div class="box7">
           <h3>My Project</h3>
           <div>
-            <div class="port">
-              <h4>Portfolio Website</h4>
-              <a></a>
-            </div>
             <div class="pro">
-              <a href="project.html"
-                ><h4>Calculator Website</h4>
-                <i class="bx bxs-file-html"></i
-              ></a>
+              <a href="index.html"><h4>Portfolio Website</h4></a>
+              <a href="file:///C:/Users/nilka/OneDrive/Desktop/portfolio/cal/index.html"><h4>Calculator Website</h4><i class="bx bxs-file-html"></i></a>
+              <a href="file:///C:/Users/nilka/OneDrive/Desktop/portfolio/cal/signUp/index.html"><h4>Sign Up Page</h4><i class="bx bxs-file-html"></i></a>
             </div>
           </div>
         </div>
@@ -92,8 +87,7 @@
         <div class="box6">
           <h3>Contact</h3>
           <p>
-            Interested in working together? Drop me a message below or email me
-            at
+            Interested in working together? Drop a mail at
             <a href="mailto:nilkantagorai@gmail.com"
               >nilkantagorai20@gmail.com</a
             >
